--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-scroll-area": "^1.0.5",
 		"@radix-ui/react-separator": "^1.0.3",
@@ -21,6 +22,7 @@
 		"react-dom": "^18",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
+		"vaul": "^0.9.1",
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
