--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
 		"@radix-ui/react-scroll-area": "^1.0.5",
 		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@uidotdev/usehooks": "^2.4.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.381.0",
+		"nanoid": "^5.0.7",
 		"next": "14.2.3",
+		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"sonner": "^1.4.41",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"vaul": "^0.9.1",
