--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@uidotdev/usehooks": "^2.4.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"dayjs": "^1.11.11",
 		"lucide-react": "^0.381.0",
 		"nanoid": "^5.0.7",
 		"next": "14.2.3",
