--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.4.2",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-scroll-area": "^1.0.5",
 		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
@@ -25,10 +27,12 @@
 		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-hook-form": "^7.51.5",
 		"sonner": "^1.4.41",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"vaul": "^0.9.1",
+		"zod": "^3.23.8",
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
