feat: add export to XLSX format component

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"vaul": "^0.9.1",
+		"xlsx": "^0.18.5",
 		"zod": "^3.23.8",
 		"zustand": "^4.5.2"
 	},
